--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -95,9 +95,14 @@ $border-radius: 4px;
 			height: 44px;
 		}
 
-		.components-form-file-upload .add {
-			color: var(--studio-black);
+		.components-form-file-upload {
 			text-decoration: underline;
+			.add {
+				color: var(--studio-black);
+			}
+			.replace {
+				color: var(--studio-gray-100);
+			}
 		}
 
 		.newsletter-setup__contrast-warning {
@@ -139,6 +144,9 @@ $border-radius: 4px;
 }
 
 .newsletter-setup__accent-color-popover {
+	.popover__arrow {
+		display: none;
+	}
 	&:focus,
 	&:focus-visible {
 		outline: none;
