--- a/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/newsletter-setup/style.scss
@@ -95,14 +95,9 @@ $border-radius: 4px;
 			height: 44px;
 		}
 
-		.components-form-file-upload {
+		.components-form-file-upload .add {
+			color: var(--studio-black);
 			text-decoration: underline;
-			.add {
-				color: var(--studio-black);
-			}
-			.replace {
-				color: var(--studio-gray-100);
-			}
 		}
 
 		.newsletter-setup__contrast-warning {
