Delete Site confirmation: fix CSS specificity for label

--- a/client/my-sites/site-settings/delete-site/style.scss
+++ b/client/my-sites/site-settings/delete-site/style.scss
@@ -48,7 +48,7 @@ h1.delete-site__confirm-header {
 	color: var(--color-neutral-70);
 }
 
-.delete-site__confirm-label {
+.form-label.delete-site__confirm-label {
 	margin-bottom: 8px;
 	line-height: 24px;
 	color: var(--color-text-subtle);
