Fix focus state

--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -191,14 +191,15 @@ button {
 						}
 					}
 				}
-				&:active:enabled {
+				&:focus {
 					background-color: var(--studio-blue-50);
+					box-shadow: none;
 					svg {
 						fill: #fff;
 					}
-				}
-				&:focus {
-					box-shadow: none;
+					span {
+						color: var(--studio-blue-50);
+					}
 				}
 			}
 		}
