Change form label font weight from medium to regular

--- a/client/layout/masterbar/woo.scss
+++ b/client/layout/masterbar/woo.scss
@@ -470,9 +470,9 @@
 		padding: 0 0 8px;
 	}
 
-	.logged-out-form label,
-	.login__form-userdata label {
-		font-weight: 500;
+	.logged-out-form label.form-label,
+	.login__form-userdata label.form-label {
+		font-weight: normal;
 		font-size: $woo-font-size-base;
 		line-height: 20px;
 		color: $woo-label-color;
