Help Center: persist happychat iframe in the Help Center 🧙🏼‍♂️ (#68292)

--- a/apps/happychat/src/index.ejs
+++ b/apps/happychat/src/index.ejs
@@ -23,6 +23,7 @@
 		<div id="wpcom" class="container"></div>
 		<script>
 			window.configData = {
+				env_id: 'help-center',
 				i18n_default_locale_slug: 'en',
 				google_analytics_key: 'UA-10673494-15',
 				client_slug: 'browser',
