--- a/packages/help-center/src/components/help-center-search.scss
+++ b/packages/help-center/src/components/help-center-search.scss
@@ -329,6 +329,7 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
+			gap: 16px;
 
 			a {
 				text-decoration: none;
@@ -346,7 +347,6 @@
 				overflow: hidden;
 				border-radius: 2px;
 				cursor: pointer;
-				margin-bottom: 16px;
 
 				.help-center-contact-page__box-icon {
 					border-radius: 2px 0 0 2px;
