Use wordpress core input

--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -234,9 +234,9 @@ button {
 			border-radius: 4px;
 			border: 1px solid var(--studio-gray-10);
 
-			&:focus {
-				box-shadow: 0 0 0 2px #e2eaf1;
-			}
+			// &:focus {
+			// 	box-shadow: 0 0 0 2px #e2eaf1;
+			// }
 		}
 	}
 
