fix issue where expanding tags caused hamburger menu to jump out of the flow

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -293,8 +293,6 @@
 .reader-post-card__byline {
 	display: flex;
 	font-size: $font-body-small;
-	align-items: space-between;
-	position: relative;
 }
 
 .reader-post-card__author::after {
@@ -334,7 +332,7 @@
 
 .reader-post-card__byline-details {
 	color: var( --color-primary );
-	width: calc(100% - 75px);
+	width: 100%;
 	position: relative;
 	top: 3px;
 }
@@ -380,17 +378,10 @@
 	color: var( --color-neutral-70 );
 	display: flex;
 	flex-direction: row;
-	height: 40px;
 	margin-top: 4px;
-	overflow-y: scroll;
-	position: relative;
-	-ms-overflow-style: none; /* Internet Explorer 10+ */
-	scrollbar-width: none; /* Firefox */
+	margin-bottom: 8px;
 	gap: 5px;
-	width: calc( 100% + 22px );
-	&::-webkit-scrollbar {
-		display: none;  /* Safari and Chrome */
-	}
+	flex-wrap: wrap;
 
 	&::after {
 		@include long-content-fade( $size: 35px );
