Remove invalid-scope-disables

--- a/client/jetpack-cloud/sections/pricing/style.scss
+++ b/client/jetpack-cloud/sections/pricing/style.scss
@@ -15,7 +15,7 @@
 	h2 {
 		line-height: inherit;
 	}
-	#header { /* stylelint-disable-line selector-max-id */
+	#header {
 		display: none;
 	}
 	.header {
