--- a/client/blocks/import/capture-retired/style.scss
+++ b/client/blocks/import/capture-retired/style.scss
@@ -66,7 +66,7 @@ $placeholder-color: #909398;
 		}
 
 		@include break-medium {
-			font-size: 2.75rem; /* stylelint-disable-line scales/font-sizes */
+			font-size: 2.75rem;
 		}
 
 		&::placeholder {
