--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/style.scss
@@ -80,7 +80,7 @@ $break-design-preview: 1024px;
 				margin: 0;
 
 				@include break-xlarge {
-					font-size: 2.75rem; /* stylelint-disable-line scales/font-sizes */
+					font-size: 2.75rem;
 				}
 			}
 
