--- a/packages/subscriber/src/components/add-form/style.scss
+++ b/packages/subscriber/src/components/add-form/style.scss
@@ -48,7 +48,7 @@
 
 	.onboarding-title {
 		margin-bottom: 1.5rem;
-		font-size: 2.75rem; /* stylelint-disable-line scales/font-sizes */
+		font-size: 2.75rem;
 		line-height: 3.5rem; /* stylelint-disable-line declaration-property-unit-allowed-list */
 	}
 
