--- a/apps/notifications/src/panel/boot/stylesheets/main.scss
+++ b/apps/notifications/src/panel/boot/stylesheets/main.scss
@@ -223,14 +223,13 @@
 		}
 
 		&:first-of-type {
-			border-top-left-radius: 4px; /* stylelint-disable-line scales/radii */
-			border-bottom-left-radius: 4px; /* stylelint-disable-line scales/radii */
+			border-top-left-radius: 4px;
+			border-bottom-left-radius: 4px;
 		}
 
 		&:last-of-type {
 			border-right: 1px solid var(--color-neutral-light);
-			border-top-right-radius: 4px; /* stylelint-disable-line scales/radii */
-			border-bottom-right-radius: 4px; /* stylelint-disable-line scales/radii */
+			border-top-right-radius: 4px;
 
 			&.selected {
 				border-right-color: var(--color-primary);
