--- a/client/components/screen-options-tab/style.scss
+++ b/client/components/screen-options-tab/style.scss
@@ -18,7 +18,7 @@ $screen-options-icon-border-y: 7px;
 
 .screen-options-tab__button {
 	border: 1px solid var(--color-neutral-5);
-	border-radius: 0 0 4px 4px; /* stylelint-disable-line scales/radii */
+	border-radius: 0 0 4px 4px;
 	background-color: #fff;
 	font-size: $default-font-size;
 	padding: 3px 16px;
