--- a/client/components/videos-ui/style.scss
+++ b/client/components/videos-ui/style.scss
@@ -143,12 +143,12 @@
 				border-bottom: 1px solid #343c3f;
 
 				&:first-child {
-					border-radius: 4px 4px 0 0; /* stylelint-disable-line scales/radii */
+					border-radius: 4px 4px 0 0;
 				}
 
 				&:last-child {
 					border-bottom: none;
-					border-radius: 0 0 4px 4px; /* stylelint-disable-line scales/radii */
+					border-radius: 0 0 4px 4px;
 				}
 
 				.videos-ui__duration {
