--- a/client/me/purchases/style.scss
+++ b/client/me/purchases/style.scss
@@ -103,12 +103,12 @@
 .purchase-item__site,
 .membership-item {
 	.site-icon {
-		border-radius: 2px; /* stylelint-disable-line scales/radii */
+		border-radius: 2px;
 	}
 
 	.site-icon,
 	.site-icon__img {
-		border-radius: 2px; /* stylelint-disable-line scales/radii */
+		border-radius: 2px;
 		width: 36px;
 		height: 36px;
 	}
@@ -118,7 +118,7 @@
 	display: flex;
 	width: 36px;
 	height: 36px;
-	border-radius: 2px; /* stylelint-disable-line scales/radii */
+	border-radius: 2px;
 	background: var(--color-error-50);
 	align-items: center;
 	justify-content: center;
