--- a/packages/design-picker/src/components/design-picker-category-filter/style.scss
+++ b/packages/design-picker/src/components/design-picker-category-filter/style.scss
@@ -85,8 +85,8 @@ $design-picker-category-filter-text-color-active: var(--studio-gray-100);
 	font-family: $sans;
 	font-size: $font-body-small;
 	line-height: 24px;
-	font-weight: 500; // stylelint-disable-line scales/font-weights
-	border-radius: 4px; // stylelint-disable-line scales/radii
+	font-weight: 500;
+	border-radius: 4px;
 	border: 1px solid #c3c4c7;
 	padding: 0 35px 0 10px;
 	margin-bottom: 32px;
