Add svg and include it on the empty results themes section

--- a/client/components/themes-list/style.scss
+++ b/client/components/themes-list/style.scss
@@ -46,7 +46,8 @@
 		color: var(--studio-gray-60);
 	}
 
-	.themes-list__upgrade-section-cta {
+	.themes-list__upgrade-section-cta,
+	.themes-list__themes-images {
 		margin-top: 32px;
 	}
 }
