HelpCenter: handle sibyl articles without post_id

--- a/packages/help-center/src/styles.scss
+++ b/packages/help-center/src/styles.scss
@@ -237,6 +237,12 @@ $head-foot-height: 50px;
 				&:hover {
 					background: var(--color-neutral-0);
 				}
+
+				> svg:last-child {
+					margin-left: auto;
+					margin-right: 0;
+					background: unset;
+				}
 			}
 		}
 
