READER - Card Refresh (#66650)
* Set feed header elements in correct source order and general layout

* Align text and set profile image size

* set max width on main column

* Center header content and set bottom margin

* Fix up vertical padding between header elements

* Set larger font size for Site Title

* Set font size for site description

* Change position of 'Back' button in Reader

* Added focus styles for settings link. Also adjusted line height of two buttons

* Reduce width of reader container to be 600px Addressing issue in #66626

* Add domain next to date - Issue outlined in #66623

* WIP move ellipsis menu to the top of reader card (#66749)

* Remove combine card functionality from reader stream

* Revert "Remove combine card functionality from reader stream"

This reverts commit 3915c9b40f12eb40c1f9bf412cd8d8be6aaf6205.

* Remove combine card functionality from reader stream

* Update separator styles on responsive mobile

Resolves changes in #66618

* Add/reader tags newline 3 (#67117)

* Update reader tags

* Updated width of tags container

With recent updates to the more menu, a few minor adjustments needed to be made.

Co-authored-by: Dave Martin <davemart-in@users.noreply.github.com>

* Update line clamping on excerpts

* Remove search bar and search suggestions from following page

* Reader Card Refresh: Stack media vertically and make full width (#67387)

* Add featured images component to build flex containers for featured images

* Update gallery to work as a slideshow

* fix missing height

* Add state to handle changing gallery images

* Sort images by width size and update number of images supported by gallery

* fix bug with video thumbnails

* fix related cards width bug

* fix video embeds thumbnails

* add lint changes

* fix lint issue

* add filtering by image ratio

* refactor getting suitable images into utility function - filter duplicates

* Remove u

--- a/client/blocks/like-button/icons.scss
+++ b/client/blocks/like-button/icons.scss
@@ -1,4 +1,7 @@
 .like-button__like-icons {
-	height: 24px;
-	width: 24px;
+	margin-right: 20px;
+	position: relative;
+	svg {
+		position: absolute;
+	}
 }
