--- a/client/blocks/like-button/style.scss
+++ b/client/blocks/like-button/style.scss
@@ -7,8 +7,7 @@
 	box-sizing: border-box;
 
 	.gridicon {
-		position: absolute;
-		left: 0;
+		vertical-align: bottom;
 	}
 
 	.gridicons-star {
@@ -68,6 +67,10 @@
 	}
 }
 
+.reader-full-post__story .like-button {
+	padding: 0;
+}
+
 .like-button__label {
 	// this keeps the label from collapsing and making the icon drop down
 	margin-left: 1px;
@@ -76,5 +79,12 @@
 
 	&:empty {
 		display: none;
+	}
+
+	.like-button__label-count {
+		font-size: 13px;
+		font-weight: 500;
+		position: relative;
+		top: 1px;
 	}
 }
