--- a/client/blocks/reader-share/style.scss
+++ b/client/blocks/reader-share/style.scss
@@ -7,6 +7,7 @@
 	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 	font-size: 100%;
 	line-height: 22px;
+	top: 2px;
 
 	&:hover,
 	&:active {
@@ -38,6 +39,10 @@
 	}
 }
 
+.reader-full-post__story .reader-share__button.button {
+	padding: 0 4px;
+}
+
 .reader-share__button-label {
 	margin-left: 6px;
 	font-weight: normal;
@@ -66,17 +71,18 @@
 	}
 
 	.gridicon,
-	.social-logo {
-		height: 24px;
-		width: 24px;
+	.reader-twitter,
+	.reader-facebook {
+		height: 20px;
+		width: 20px;
 		position: absolute;
 		top: 8px;
 		left: 18px;
 		padding: 0;
 		fill: var(--color-neutral-light);
 
-		@include breakpoint-deprecated( ">480px" ) {
-			left: 11px;
+		@include breakpoint-deprecated( '>480px' ) {
+			left: 14px;
 		}
 	}
 
@@ -84,19 +90,20 @@
 		fill: var(--color-primary);
 	}
 
-	.social-logo.twitter {
-		fill: var(--color-twitter);
+	.reader-twitter {
+		fill: var( --color-twitter );
 	}
 
-	.social-logo.facebook {
-		fill: var(--color-facebook);
+	.reader-facebook {
+		fill: var( --color-facebook );
 	}
 
 	&:hover,
 	&:focus {
 		.gridicon,
-		.social-logo {
-			fill: var(--color-text-inverted);
+		.reader-twitter,
+		.reader-facebook {
+			fill: var( --color-text-inverted );
 		}
 	}
 }
@@ -106,7 +113,7 @@
 }
 
 .reader-share__site-selector.site-selector {
-	border-top: 1px solid var(--color-neutral-10);
+	border-top: 1px solid var( --color-neutral-5 );
 }
 
 .reader-share__site-selector .site-selector__sites {
@@ -126,4 +133,8 @@
 		/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 		border-radius: 50%;
 	}
+}
+
+.reader-post-actions__item .reader-share {
+	margin-right: 2px;
 }
