fix icon colours and add fill to the liked state

--- a/client/blocks/comments/comment-actions.scss
+++ b/client/blocks/comments/comment-actions.scss
@@ -31,11 +31,13 @@
 		}
 
 		&:hover,
-		button.is-active {
+		button.is-active,
+		&.like-button.is-liked {
 			color: var( --color-primary );
 
 			svg.reader-star path {
-				stroke: var(--color-link);
+				stroke: var( --color-primary );
+				fill: var( --color-primary );
 			}
 		}
 
