--- a/client/blocks/like-button/style.scss
+++ b/client/blocks/like-button/style.scss
@@ -13,7 +13,7 @@
 	.gridicons-star {
 		opacity: 0;
 		pointer-events: none;
-		fill: var(--color-primary);
+		fill: var(--color-link);
 		transform: scale(4) rotate(90deg);
 	}
 
@@ -27,15 +27,16 @@
 
 	&:hover {
 		cursor: pointer;
-		color: var(--color-primary);
+		color: var(--color-link);
 	}
 
 	&.is-liked {
 		color: var(--color-text-subtle);
 
+		
 		.gridicons-star {
 			opacity: 1;
-			fill: var(--color-primary);
+			fill: var(--color-link);
 			pointer-events: auto;
 			transform: scale(1) rotate(0);
 		}
@@ -43,12 +44,12 @@
 		.gridicons-star-outline {
 			opacity: 0;
 			pointer-events: none;
-			fill: var(--color-primary);
+			fill: var(--color-link);
 			transform: translateX(-10px) rotate(1deg) scale(0.3);
 		}
 
 		.like-button__label {
-			color: var(--color-primary);
+			color: var(--color-link);
 		}
 	}
 
