--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -137,13 +137,24 @@
 
 	.reader-post-actions__item {
 		&:hover,
-		button.is-active {
+		button.is-active,
+		.like-button.is-liked {
 			svg.reader-external path {
-				fill: var(--color-link);
+				fill: var( --color-link );
 			}
 
-			svg.reader-comment path, svg.reader-star path, svg.reader-share path {
-				stroke: var(--color-link);
+			svg.reader-comment path, svg.reader-share path {
+				stroke: var( --color-link );
+			}
+
+			svg.reader-star path {
+				stroke: var( --color-link );
+			}
+		}
+
+		.like-button.is-liked {
+			svg.reader-star path {
+				fill: var( --color-link );
 			}
 		}
 	}
