--- a/client/my-sites/plugins/search-box-header/style.scss
+++ b/client/my-sites/plugins/search-box-header/style.scss
@@ -55,7 +55,7 @@
 		font-size: $font-title-large;
 		font-weight: 400;
 		line-height: 40px;
-
+		color: var(--studio-blue-90);
 	}
 
 	.search-box-header__recommended-searches {
