--- a/client/my-sites/plugins/style.scss
+++ b/client/my-sites/plugins/style.scss
@@ -291,12 +291,80 @@ body.is-section-plugins header .select-dropdown__item {
 	padding: 0 0 0 16px !important;
 }
 
+body.is-section-plugins #primary {
+	&::before {
+		box-sizing: border-box;
+		content: "";
+		background-color: #fdfdfd;
+		position: absolute;
+		height: 100%;
+		width: 200vw;
+		left: -100vw;
+		z-index: -1;
+	}
+
+	.categories__menu {
+		.components-button {
+			&:not(.is-pressed) {
+				color: var(--studio-blue-90);
+			}
+			&.is-pressed {
+				&::before {
+					background: var(--studio-blue-90);
+				}
+			}
+		}
+	}
+}
+
 .legacy {
 	.plugin-details__body {
 		border-top: 1px solid var(--studio-gray-5);
 
 		.plugin-sections {
 			margin-top: 20px;
+		}
+		.section-nav-tabs__list {
+			box-shadow: none;
+		}
+
+		.section-nav-tab {
+			border-bottom: 2px solid transparent;
+
+			&.is-selected,
+			&:hover:not(.is-selected) {
+				border-bottom-color: transparent;
+			}
+
+			&:first-child .section-nav-tab__link {
+				padding-left: 0;
+			}
+
+			.section-nav-tab__link {
+				font-size: $font-body-small;
+				color: var(--color-primary);
+				padding: 16px 16px 14px;
+
+				&:hover {
+					background-color: transparent;
+					color: var(--color-primary);
+				}
+
+				.section-nav-tab__text {
+					padding-bottom: 0;
+					border-bottom: none;
+				}
+			}
+
+			&.is-selected .section-nav-tab__link {
+				font-weight: bold;
+				border-bottom: none;
+				color: var(--color-neutral-70);
+
+				&:hover {
+					color: var(--color-neutral-70);
+				}
+			}
 		}
 	}
 
@@ -433,53 +501,6 @@ body.is-section-plugins header .select-dropdown__item {
 	}
 }
 
-.legacy {
-	.plugin-details__body {
-		.section-nav-tabs__list {
-			box-shadow: none;
-		}
-
-		.section-nav-tab {
-			border-bottom: 2px solid transparent;
-
-			&.is-selected,
-			&:hover:not(.is-selected) {
-				border-bottom-color: transparent;
-			}
-
-			&:first-child .section-nav-tab__link {
-				padding-left: 0;
-			}
-
-			.section-nav-tab__link {
-				font-size: $font-body-small;
-				color: var(--color-primary);
-				padding: 16px 16px 14px;
-
-				&:hover {
-					background-color: transparent;
-					color: var(--color-primary);
-				}
-
-				.section-nav-tab__text {
-					padding-bottom: 0;
-					border-bottom: none;
-				}
-			}
-
-			&.is-selected .section-nav-tab__link {
-				font-weight: bold;
-				border-bottom: none;
-				color: var(--color-neutral-70);
-
-				&:hover {
-					color: var(--color-neutral-70);
-				}
-			}
-		}
-	}
-}
-
 .plugins__confirmation-modal {
 	.plugins__confirmation-modal-heading {
 		font-size: 1rem;
@@ -528,3 +549,4 @@ body.is-section-plugins header .select-dropdown__item {
 		}
 	}
 }
+
