--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -583,8 +583,7 @@
 	display: none;
 }
 
-.reader-post-actions__item,
-.reader-full-post__sidebar-comment-like {
+.reader-post-actions__item {
 	&:hover,
 	button.is-active,
 	.like-button.is-liked {
@@ -604,6 +603,27 @@
 	.like-button.is-liked {
 		svg.reader-star path {
 			fill: var( --color-link );
+		}
+	}
+}
+
+.reader-full-post__sidebar-comment-like {
+	.comment-button.is-active,
+	.comment-button:hover {
+		svg.reader-comment path {
+			stroke: var( --color-link );
+		}
+	}
+	.like-button:hover,
+	.like-button.is-active,
+	.like-button.is-liked {
+		svg.reader-star path {
+			stroke: var( --color-link );
+		}
+	}
+	.like-button.is-liked {
+		svg.reader-star path {
+			fill: var(--color-link);
 		}
 	}
 }
