fix following icon

--- a/client/blocks/follow-button/style.scss
+++ b/client/blocks/follow-button/style.scss
@@ -11,20 +11,23 @@ button.follow-button {
 		pointer-events: auto;
 
 		path {
-			fill: var( --color-primary );
+			fill: var( --color-text-subtle );
 		}
 	}
 
 	.follow-button__label {
-		color: var( --color-primary );
+		color: var( --color-text-subtle );
 		margin-left: 5px
 	}
 
 	&:hover {
-		color: var(--color-primary);
+		color: var(--color-success);
 
+		.follow-button__label {
+			color: var( --color-success );
+		}
 		svg.reader-follow-feed path {
-			fill: var( --color-primary );
+			fill: var( --color-success );
 		}
 	}
 
@@ -42,6 +45,13 @@ button.follow-button {
 		svg.reader-following-feed {
 			display: inline-block;
 			pointer-events: auto;
+
+			path.following-icon-background {
+				fill: var( --color-success );
+			}
+			path.following-icon-tick {
+				stroke: var( --color-success );
+			}
 		}
 
 		.follow-button__label {
@@ -52,6 +62,18 @@ button.follow-button {
 		svg.reader-follow-feed {
 			display: none;
 			pointer-events: none;
+		}
+		
+		&:hover {
+			color: var( --color-success );
+			svg.reader-following-feed {
+				path.following-icon-background {
+					fill: var( --color-success );
+				}
+				path.following-icon-tick {
+					stroke: var( --color-success );
+				}
+			}
 		}
 	}
 
