Show neutral state for already up-to date plugins when clicked on update

--- a/client/my-sites/plugins/plugin-management-v2/plugin-action-status/style.scss
+++ b/client/my-sites/plugins/plugin-management-v2/plugin-action-status/style.scss
@@ -26,7 +26,8 @@
 	}
 }
 
-.plugin-action-status-inProgress {
+.plugin-action-status-inProgress,
+.plugin-action-status-upToDate {
 	background: #f6f7f7;
 	color: #50575e;
 }
