--- a/apps/notifications/src/panel/boot/stylesheets/main.scss
+++ b/apps/notifications/src/panel/boot/stylesheets/main.scss
@@ -230,6 +230,8 @@
 		&:last-of-type {
 			border-right: 1px solid var(--color-neutral-light);
 			border-top-right-radius: 4px;
+			border-bottom-right-radius: 4px;
+
 
 			&.selected {
 				border-right-color: var(--color-primary);
