--- a/client/jetpack-cloud/sections/pricing/style.scss
+++ b/client/jetpack-cloud/sections/pricing/style.scss
@@ -15,7 +15,7 @@
 	h2 {
 		line-height: inherit;
 	}
-	#header { /* stylelint-disable-line selector-max-id */
+	#header {
 		display: none;
 	}
 	.header {
@@ -34,7 +34,7 @@
 
 			color: var(--color-text);
 
-			font-size: rem(21px); /* stylelint-disable-line declaration-property-unit-allowed-list */
+			font-size: rem(21px);
 
 			@include break-medium {
 				margin: 1.5rem 0 40px;
