--- a/packages/help-center/src/styles.scss
+++ b/packages/help-center/src/styles.scss
@@ -80,7 +80,7 @@ $head-foot-height: 50px;
 		}
 
 		&.is-desktop {
-			top: calc(#{$header-height} + 16px);
+			top: 32px;
 			right: 16px;
 			width: 410px;
 			height: 80vh;
@@ -98,6 +98,10 @@ $head-foot-height: 50px;
 
 			&.is-minimized {
 				min-height: $head-foot-height;
+			}
+
+			&.larger-margin {
+				top: 60px;
 			}
 		}
 
