--- a/client/blocks/comment-button/style.scss
+++ b/client/blocks/comment-button/style.scss
@@ -3,10 +3,8 @@
 	box-sizing: border-box;
 	color: var(--color-text-subtle);
 	cursor: pointer;
-	display: inline-flex;
-	list-style-type: none;
-	padding: 4px;
-	position: relative;
+	display: flex;
+	height: 20px;
 
 	&:hover,
 	&:active {
@@ -20,17 +18,9 @@
 	}
 }
 
-.reader-full-post__story .comment-button {
-	padding: 0;
-	top: -1px;
-}
-
 .comment-button__label {
 	font-size: 13px;
 	font-weight: 500;
-	margin-left: -1px;
-	position: relative;
-	top: 1px;
 
 	&:empty {
 		display: none;
@@ -38,14 +28,15 @@
 
 	.comment-button__label-count {
 		font-size: 13px;
-		margin-right: 4px;
-		position: relative;
-		top: 5px;
+		font-weight: 500;
 	}
 }
 
+.reader-full-post .reader-post-actions .comment-button__label {
+	font-size: 13px;
+	font-weight: 500;
+}
+
 .comment-button__icon {
-	position: relative;
-	top: 2px;
-	margin-right: 5px;
+	margin-right: 4px;
 }
