Update style suggestions

--- a/client/my-sites/plugins/style.scss
+++ b/client/my-sites/plugins/style.scss
@@ -311,6 +311,7 @@ body.is-section-plugins #primary {
 			&.is-pressed {
 				&::before {
 					background: var(--studio-blue-90);
+					border-radius: 4px;
 				}
 			}
 		}
