--- a/client/my-sites/plugins/search-box-header/style.scss
+++ b/client/my-sites/plugins/search-box-header/style.scss
@@ -24,12 +24,13 @@
 				z-index: 0;
 				max-width: 400px;
 				margin: 0 auto;
+				border-radius: 4px;
 
 				&.is-expanded-to-container {
 					height: 100%;
 				}
 
-				box-shadow: 0 0 0 1px var(--studio-gray-10);
+				box-shadow: 0 0 0 1px var(--studio-gray-5);
 
 				.search-component__icon-navigation:focus {
 					box-shadow: none;
@@ -37,7 +38,7 @@
 
 				.search-component__open-icon,
 				.search-component__close-icon {
-					color: var(--studio-black);
+					color: var(--studio-gray-5);
 				}
 
 				&.is-searching {
@@ -47,6 +48,18 @@
 					}
 				}
 
+				.search-component__input-fade {
+					right: 3px;
+				}
+				.search-component__icon-navigation:first-of-type {
+					margin-left: 3px;
+				}
+				.search-component__icon-navigation:not(:first-of-type) {
+					margin-right: 3px;
+					.search-component__close-icon {
+						color: #757575;
+					}
+				}
 			}
 		}
 	}
