--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -660,7 +660,6 @@
 }
 
 .reader-post-card__gallery-item {
-	border: 1px solid var(--color-neutral-0);
 	cursor: pointer;
 	flex: 1;
 	height: auto;
@@ -687,7 +686,7 @@
 
 .reader-post-card__gallery-image {
 	border-radius: 6px;
-	box-shadow: 0 0 0 1px rgba(0,0,0,.1);
+	box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
 	height: 300px;
 }
 
