Added upsell nudge to plugin search results page

--- a/client/my-sites/plugins/search-box-header/style.scss
+++ b/client/my-sites/plugins/search-box-header/style.scss
@@ -1,5 +1,5 @@
 .search-box-header {
-	margin: 40px 0 48px;
+	padding: 40px 0 48px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
