Ensure relevant global css applies to new flow

--- a/client/landing/stepper/declarative-flow/internals/global.scss
+++ b/client/landing/stepper/declarative-flow/internals/global.scss
@@ -57,6 +57,7 @@ button {
 .import-focused,
 .plugin-bundle,
 .newsletter-setup,
+.newsletter-post-setup,
 .patterns,
 .link-in-bio-setup,
 .link-in-bio-post-setup,
